--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/fontello.css">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css?version=1.2" />
   </head>
   <body>
     <main>
